feat: Add cron installation to Dockerfile and configure Laravel scheduler in supervisord

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -24,3 +24,11 @@ numprocs=2
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
 stopwaitsecs=3600
+
+[program:laravel-scheduler]
+command=bash -c "while [ true ]; do php /var/www/html/artisan schedule:run --no-interaction; sleep 60; done"
+autostart=true
+autorestart=true
+user=www-data
+stderr_logfile=/var/www/html/storage/logs/scheduler.err.log
+stdout_logfile=/var/www/html/storage/logs/scheduler.out.log
