--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -7,7 +7,7 @@ pidfile=/var/run/supervisord.pid
 [program:apache2]
 command=/usr/sbin/apache2ctl -D FOREGROUND
 autostart=true
-autorestart=true
+autorestart=unexpected
 stderr_logfile=/var/log/supervisor/apache2.err.log
 stdout_logfile=/var/log/supervisor/apache2.out.log
 user=root
