--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,8 +1,18 @@
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0700
+
 [supervisord]
 nodaemon=true
 user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
 
 [program:apache2]
 command=/usr/sbin/apache2ctl -D FOREGROUND
@@ -17,13 +27,10 @@ process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600
 autostart=true
 autorestart=true
-stopasgroup=true
-killasgroup=true
 user=www-data
 numprocs=2
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
-stopwaitsecs=3600
 
 [program:laravel-scheduler]
 command=bash -c "while [ true ]; do php /var/www/html/artisan schedule:run --no-interaction; sleep 60; done"
