--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "spatie/laravel-ray"
+            ]
         }
     },
     "config": {
