--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/logs/*
+/storage/framework/cache/data/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/framework/views/*
 /storage/pail
 /vendor
 .env
