--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -14,12 +14,20 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
 
-[program:apache2]
-command=/usr/sbin/apache2ctl -D FOREGROUND
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
 autostart=true
-autorestart=unexpected
-stderr_logfile=/var/log/supervisor/apache2.err.log
-stdout_logfile=/var/log/supervisor/apache2.out.log
+autorestart=true
+stderr_logfile=/var/log/supervisor/nginx.err.log
+stdout_logfile=/var/log/supervisor/nginx.out.log
+user=root
+
+[program:php-fpm]
+command=php-fpm -F
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/supervisor/php-fpm.err.log
+stdout_logfile=/var/log/supervisor/php-fpm.out.log
 user=root
 
 [program:laravel-worker]
